# ogdoad

./: .gitignore  AGENTS.md  AUDIT.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  OPEN-3.md  OPEN.md  README.md  ROADMAP.md  SECURITY.md  TABLES.md  demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: COMPLETENESS.md  DONE.md  TABLES.md
examples/: bent_route.rs  interactive_kernel.rs  loopy_quadric.rs  octal_hunt.rs  ogham_repl.rs  tour.rs  tropical.rs
experiments/: arf_win_bias.py  artin_arf.py  echo_solver.py  framing_obstruction.py  gold_family_survey.py  misere_kernel.py  open_question_probe.py  tartan_bilinear.py  trace_form_arf.py
experiments/audit/: README.md
experiments/excess/: README.md
experiments/gold/: README.md  construct_round2.py  gold_diag_probe.py  nogo_verify.py
roadmap/: CODA.md  DONE.md  TODO.md
spec/: conformance.txt  conformance_v2.txt  ogham.md
src/: arf.rs  cga.rs  classify.rs  clifford.rs  disc.rs  games.rs  hopf.rs  lib.rs  misere.rs  nimber.rs  omnific.rs  onag.rs  outermorphism.rs  py.rs  scalar.rs  spinor.rs  springer.rs  surcomplex.rs  surreal.rs  witt.rs
src/clifford/: AGENTS.md  blade.rs  cga.rs  divided_power.rs  engine.rs  frobenius.rs  hopf.rs  mod.rs  outermorphism.rs  spinor.rs  spinor_norm.rs  versor.rs
src/forms/: AGENTS.md  adelic.rs  brauer_wall.rs  char0.rs  char2.rs  classify.rs  diagonalize.rs  equivalence.rs  function_field.rs  function_field_char2.rs  genus.rs  hermitian.rs  invariants.rs  lattice.rs  mod.rs  oddchar.rs  padic.rs  poly_factor.rs  quadric_fit.rs  root_lattices.rs  springer.rs  springer_char2.rs  springer_laurent.rs  springer_local.rs  springer_padic.rs  symplectic.rs  trace_form.rs  witt.rs  witt_ring.rs
src/games/: AGENTS.md  coin_turning.rs  game_exterior.rs  grundy.rs  hackenbush.rs  kernel.rs  lexicode.rs  loopy.rs  misere.rs  mod.rs  nimber_game.rs  number_game.rs  partizan.rs  piecewise.rs  thermography.rs  tropical_thermography.rs
src/linalg/: AGENTS.md  f2.rs  field.rs  integer.rs  mod.rs
src/ogham/: ast.rs  error.rs  eval.rs  lex.rs  mod.rs  parse.rs  unparse.rs
src/py/: AGENTS.md  engine.rs  forms.rs  games.rs  mod.rs  scalars.rs
src/scalar/: AGENTS.md  analytic.rs  eisenstein.rs  extension.rs  fp.rs  fpn.rs  integer.rs  integrality.rs  mod.rs  newton.rs  nimber.rs  omnific.rs  poly.rs  rational.rs  residue.rs  surcomplex.rs  surreal.rs  tropical.rs  valued.rs  (+2 more)
tasks/: AUDIT-ARCHIVE.md  AUDIT.md  DONE.md  OPEN.md  TASTE.md  TODO.md
tests/: clifford_axioms.rs  ogham_conformance.rs  scalar_axioms.rs  tropical_axioms.rs
writeup/: pleroma.tex
writeups/: excess.tex  goldarf.tex
(+92 files in other folders)
